# Cortex-agent

./: .env.example  .gitignore  AGENTS.md  GEMINI_TEMPLATE.md  INSTALL.en.md  INSTALL.md  README.en.md  README.md  pyproject.toml  requirements.txt  settings.yaml  setup.sh
.github/workflows/: ci.yml
docs/: runbook-os-validation.md  목차.md
protocols/: reporting.md
rules/: cognitive.md  diagnostics.md  enforcement.md  governance.md  identity.md  infrastructure.md  learning.md  rule.md
rules/core/: architecture.md  learning.md
rules/core/protocols/: multi-agent-relay.md
rust/: Cargo.toml
rust/crates/parsers/: Cargo.toml
rust/crates/parsers/examples/: test_uuid.rs
rust/crates/parsers/src/: common.rs  lib.rs
rust/crates/scanner/: Cargo.toml
rust/crates/scanner/src/: filters.rs  finder.rs  ignores.rs  index_roots.rs  lib.rs  settings.rs
rust/crates/storage/: Cargo.toml
rust/crates/storage/src/: lib.rs
rust/crates/watcher/: Cargo.toml
rust/crates/watcher/src/: main.rs
scripts/: backup.sh  cortex_mcp.py  generate_kuzu_viz.py  jules_mcp.py  relay.py
scripts/cortex/: capsule.py  cortex_ctl.py  db.py  edit_engine.py  extract_inbox.py  git_analyzer.py  graph_db.py  hooks_manager.py  impact.py  indexer.py  indexer_utils.py  logger.py  memory.py  paths.py  persistent_memory.py  search_engine.py  skeleton.py  skill_manager.py  updater.py  vector_engine.py  vector_engine_server.py  vectorizer.py  watcher.py
scripts/cortex/capsules/: context.py
scripts/cortex/dev/: verify_imports.py
scripts/cortex/embeddings/: __init__.py  batch.py  hardware.py  provider.py  server_client.py
scripts/cortex/eval/: __init__.py  __main__.py  baseline.json  baseline.py  golden.py  metrics.py
scripts/cortex/hooks/: manager.py
scripts/cortex/indexing/: __init__.py  cli.py  constants.py  edge_resolver.py  file_pipeline.py  graph_sync.py  incremental.py  index_roots.py  queries.py  records.py  rules_sync.py  vector_store.py  workspace.py
scripts/cortex/integrations/: claude_hook.py  codex_hook.py  codex_session_start.py
scripts/cortex/mcp/: context.py  dispatcher.py  registry.py  response.py  server.py
scripts/cortex/memories/: __init__.py  persistent.py  working.py
scripts/cortex/orchestration/: contracts.py  lock.py
scripts/cortex/parsers/: __init__.py  c_parser.py  java_parser.py  markdown_parser.py  pdf_parser.py  python_parser.py  registry.py  treesitter_cs_parser.py  treesitter_ts_parser.py  typescript_parser.py
scripts/cortex/retrieval/: __init__.py  fts.py  fts_query.py  hybrid.py  queries.py  ranking.py  semantic.py  snippets.py
scripts/cortex/runtime/: bootstrap_cli.py  control.py  engine_router.py  ipc.py  (+12 more)
scripts/diagnostics/: zombie-check.ps1  zombie-check.sh
tasks/: 지식화.md
templates/: .env.example  CLAUDE_TEMPLATE.md  GEMINI_TEMPLATE.md  GLOBAL_RULE_MD_TEMPLATE.md  settings.local.yaml.example
templates/ignores/: .aiderignore  .claudesignore
tests/: test_db.py  test_indexer.py  test_persistent_memory_security.py  test_vector_engine.py
workflows/: jules.md  검토.md  작성.md  정리.md  진행.md  질문.md  테스트.md
(+45 files in other folders)
