[package]
name = "cortex-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
walkdir = { workspace = true }
ignore = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
globset = { workspace = true }
tracing = { workspace = true }
